--- a/index.html
+++ b/index.html
@@ -9,36 +9,36 @@
 <body>
   <section>
     <div class="container">
-      <div class="user box-singin">
-        <div class="box-image">
-          <img src="./assets/images/image_login.png" alt="logo">
+      <div class="container_box-image">
+        <img src="./assets/images/image_login.png" alt="logo">
+      </div>
+      <div class="container-form">
+        <div class="container-form_box-form">
+          <div class="container-form_box-image">
+            <img src="./assets/images/image_login.png" alt="logo">
+          </div>
+
+          <form>
+            <h2>Redefinir senha</h2>
+            <input type="email" name="email" placeholder="Digite seu email">            
+            <button type="submit">Enviar</button>
+            <span class="signup">Lembrou sua senha?</span>
+            <a href="#" id="link_singin">Fazer login</a>  
+          </form>
         </div>
-        <div class="box-form">
+        <div class="container-form_box-form">
+          <div class="container-form_box-image">
+            <img src="./assets/images/image_login.png" alt="logo">
+          </div>
+
           <form>
             <h2>Fazer login</h2>
             <input type="email" name="email" placeholder="Digite seu e-mail">
             <input type="password" name="senha" placeholder="Digite sua senha">
             <button type="submit">Login</button>
-            <span class="signup">ainda não tem cadastro? <a href="#" id="link_singup">Cadastre-se</a></span>
+            <span class="signup">Esqueceu sua senha?</span>
+            <a href="#" id="link_singup">Redefinir senha</a>
           </form>
-        </div>
-      </div>
-
-      <div class="user box-singup">
-        <div class="box-form">
-          <form>
-            <h2>Cadastro</h2>
-            <input type="text" name="name" placeholder="Digite seu nome">
-            <input type="email" name="email" placeholder="Digite seu email">
-            <input type="password" name="password" placeholder="Digite sua senha">
-            <input type="password" name="password_confirm" placeholder="Confirme sua senha">
-            
-            <button type="submit">Sign Up</button>
-            <span class="signup">Já tem cadastro? <a href="#" id="link_singin">Fazer login</a></span>
-          </form>
-        </div>
-        <div class="box-image">
-          <img src="./assets/images/image_login.png" alt="logo">
         </div>
       </div>
     </div>
