--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </div>
 
           <form>
-            <h2>Redefinir senha</h2>
+            <h1>Redefinir senha</h1>
             <input type="email" name="email" placeholder="Digite seu email">            
             <button type="submit">Enviar</button>
             <span class="signup">Lembrou sua senha?</span>
@@ -32,7 +32,7 @@
           </div>
 
           <form>
-            <h2>Fazer login</h2>
+            <h1>login</h1>
             <input type="email" name="email" placeholder="Digite seu e-mail">
             <input type="password" name="senha" placeholder="Digite sua senha">
             <button type="submit">Login</button>
